--- a/app/views/themes/waterfall/friends/setting_sns.html.erb
+++ b/app/views/themes/waterfall/friends/setting_sns.html.erb
@@ -3,6 +3,9 @@
 <% end %>
 
 <div class="whitespace friends">
+  <%= link_to request.referer, :class => "btn_gray float_r" do %>
+      <span>返回</span>
+  <% end %>
   <h1 class="main_title">同步设置</h1>
   <h3>同步各大社区网站，随时分享你在IWine得有趣发现</h3>
   <div class="sys">
