--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -240,6 +240,7 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .comment_post_star .reply_text span {margin-right:10px;}
 .comment_post_star .evaluate {float:right;width:90px;}
 .comment_post_star .star_rate {margin:5px 0 10px 0;}
+.comment_post_star .star_rate li {float:left;display:block;}
 
 /*-------User list--------*/
 .userlist {zoom:1;}
