--- a/public/template/wine_photo_detail.html
+++ b/public/template/wine_photo_detail.html
@@ -65,7 +65,7 @@
                 <h3>评论</h3>
                 </div>
               </div>
-               <ul class="comment_list">
+              <ul class="comment_list">
                 	<li>
                     	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
                         <div class="main">
@@ -105,17 +105,19 @@
                     </li>
                     <div class="clear"></div>
               </ul>
-                <a name="01" id="01"></a>
-                <div class="comment_post">
-           	    <div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                    <div class="post_main">
-                      <div class="post">
-                       	  <textarea class="mb10" name="" cols="" rows=""></textarea>
-                            <div><a href="#" class="btn_gray"><span>加上去</span></a></div>
-                      </div>
-                  </div>
-                     <div class="clear"></div>
-                </div>
+               <div class="comment_post_star mt30">
+                       <a name="01" id="01"></a>
+                       <div class="evaluate">
+                         <a href="#" class="btn_gray"><span>加上去</span></a>
+                 </div>
+                        <div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
+                            <div class="post_main">
+                              <div class="post">
+                                  <textarea class="mb10" name="" cols="" rows=""></textarea>
+                              </div>
+                          </div>
+                             <div class="clear"></div>
+              </div>
                 </div>
                 </div>
             </div>
