--- a/public/template/winery_comment_list.html
+++ b/public/template/winery_comment_list.html
@@ -214,10 +214,19 @@
                             <span class="disabled"> < </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> > </a><br />
                         </div>
                       <div class="comment_post_star mt30">
-                        <a name="01" id="01"></a>
+                       <a name="01" id="01"></a>
                         <div class="evaluate">
                         想给个评价么？
-                        <div class="star_rate"><a href="#"><img src="images/icon/star_red.gif" width="16" height="16" /></a><a href="#"><img src="images/icon/star_red.gif" width="16" height="16" /></a><a href="#"><img src="images/icon/star_yellow.gif" width="16" height="16" /></a><a href="#"><img src="images/icon/star_yellow.gif" width="16" height="16" /></a><img src="images/icon/star_gray.gif" width="16" height="16" /></div><div class="clear"></div>
+                        <div class="star_rate">
+                        	<ul id="stars">
+                            	<li id="star_1" class="star"><img src="images/icon/star_yellow.gif" width="16" height="16" /></li>
+                                <li id="star_2" class="star"><img src="images/icon/star_yellow.gif" width="16" height="16" /></li>
+                                <li id="star_3" class="star"><img src="images/icon/star_yellow.gif" width="16" height="16" /></li>
+                                <li id="star_4" class="star"><img src="images/icon/star_yellow.gif" width="16" height="16" /></li>
+                                <li id="star_5" class="star"><img src="images/icon/star_gray.gif" width="16" height="16" /></li>
+                            </ul>
+                        </div>
+                        <div class="clear"></div>
                          <a href="#" class="btn_gray"><span>加上去</span></a>
                         </div>
                         <div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
