--- a/app/views/themes/waterfall/comments/_comment_form.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_form.html.erb
@@ -40,5 +40,5 @@
 <% end -%>
 
 <script type="text/template" id="star_item">
-  <%= image_tag 'base/star_gray.jpg', :width => 15, :height => 14 %>
+  <%= image_tag 'base/star_gray.gif', :width => 15, :height => 14 %>
  </script>
