--- a/app/views/themes/waterfall/comments/_comment_list.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_list.html.erb
@@ -45,12 +45,47 @@
 		<% end %>
 		<div class="clear"></div>
 		
-		<div class="comment_post mt30">
+		<div class="comment_post_star mt30">
 			<% if user_signed_in? %>
 			<%= form_for [@commentable, @comment], :validate => true do |f| -%>
 			<%= f.hidden_field :do %>
 			<%= hidden_field_tag "return_url", request.fullpath %>
 			<a name="01" id="01"></a>
+
+			<div class="evaluate">
+				<% #图片不需要评星 %>
+				<%  unless @comment.commentable_type == "Photo"   %>
+				想给个评价么？
+				<div class="star_rate" id="wine_profile_star_bar">
+					<ul id="stars">
+					</ul>
+					<input type="hidden" name="rate_value" value=<%= @comment.point || 0 %> />
+				</div>
+				<div class="clear"></div>
+				<!-- <span class="text_value"></span> -->
+
+				<script type="text/template" id="star_item">
+ 				 <%= image_tag 'base/star_gray.gif', :width => 15, :height => 14 %>
+		   		</script>
+
+		   		<script type="text/javascript">
+		   		 $(document).ready(function(){
+
+		   		 });
+		   		</script>
+				<% end %>
+				<div class="clear"></div>
+				<a href="javascript:void(0)" class="btn_gray submit"><span>加上去</span></a>
+			</div>
+
+
+
+		  	<%#= content_for :js do %>
+		  		<%= theme_javascript_include_tag :star_rate %>
+		  	<% #end %>
+		  	
+
+		   
 			<div class="userpic">
 				<%= link_to_user @user,
 				users_path(@user),
@@ -60,9 +95,6 @@
 			<div class="post_main">
 				<div class="post">
 					<%= f.text_area :body,  :class => [:mb10, :comment_body] %>
-					<div>
-						<a href="javascript:void(0)" class="btn_gray submit"><span>加上去</span></a>
-					</div>
 				</div>
 			</div>
 			<div class="clear"></div>
@@ -76,6 +108,8 @@
 
 <script type="text/javascript">
   $(document).ready(function(){
+
+
   // "有用" 成功时，更新有用的数量
   $("a.vote").bind("ajax:success", function(event, data, textStatus, jqXHR){
     $(this).find("span.likes_count").text(data);
@@ -95,6 +129,12 @@
   }
   });
 
+<% #图片不需要评星 %>
+<%  unless @comment.commentable_type == "Photo"   %>
+  window.StarApp = new StarsView({el:$("#wine_profile_star_bar")});
+		  		StarApp.itemView = new StarItemView();
+		  		StarApp.setDefaultRateStar();
+<% end %>
 
   });
 </script>
