--- a/app/views/themes/waterfall/comments/winery_comments_list.html.erb
+++ b/app/views/themes/waterfall/comments/winery_comments_list.html.erb
@@ -19,7 +19,11 @@
          </div>
          
          <div class="content">
-           
+          <%= render "comment_list" %>
+          <div class="clear"></div>
+          <div class="pagination">
+            <%= paginate @comments %>
+          </div>
          </div>
        </div>
      </div>
