--- a/app/views/themes/waterfall/users/_sub_nav.html.erb
+++ b/app/views/themes/waterfall/users/_sub_nav.html.erb
@@ -42,14 +42,18 @@
        <div class="username"><%= @user.username %></div>
        <div class="mystatu"><%= @user.profile.bio %></div>
        <div class="item">
-        <% if (current_user.is_following @user) && (@user.is_following current_user) # 如果用户互相关注%>
-          <span class="icon_fol_e mr5">互相关注<span class="cancl_fol"><a href="#">(取消)</a></span></span>
-        <% elsif current_user.is_following @user %>
-          <span class="icon_fol mr5">已关注<span class="cancl_fol"><a href="#">(取消)</a></span></span>
-        <% else %>
-          <a href="#" class="btn_gray"><span>加关注</span></a>
+        <% if user_signed_in? %>
+            <% if (current_user.is_following @user) && (@user.is_following current_user) # 如果用户互相关注%>
+              <span class="icon_fol_e mr5">互相关注<span class="cancl_fol"><a href="#">(取消)</a></span></span>
+            <% elsif current_user.is_following @user %>
+              <span class="icon_fol mr5">已关注<span class="cancl_fol"><a href="#">(取消)</a></span></span>
+            <% else %>
+              <a href="#" class="btn_gray"><span>加关注</span></a>
+            <% end %>
+        <% else %>  
+             <a href="#" class="btn_gray"><span>加关注</span></a>  
+             <%= link_to "私信", "/", :class => :icon_mail %> 
         <% end %>
-         <%= link_to "私信", "/", :class => :icon_mail %> 
         </div> 
       <% end %>      
       <ul class="hp_navi">
