message notice update

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -22,7 +22,7 @@
             	<ul>
                 	<li class="userbox">
                     	<a class="userpic" href="#"><img src="images/userimage/06.jpg" width="20" height="20" /></a><a href="#"><img src="images/common/userbox_arrow.jpg" width="22" height="30" /></a>
-                        <div class="message_notice">有1条私信</div>
+                        <div class="message_notice"><a href="#" >有1条私信</a></div>
                     </li>
                     <li class="top_add"><a href="#" class="btn_add">添加</a></li>
                 </ul>
