password forget page update

--- a/public/template/user_notice_setting.html
+++ b/public/template/user_notice_setting.html
@@ -38,8 +38,9 @@
     </div>
     <div id="wrapper950">
     	<div class="whitespace setting">
+            <a href="friends_sns_bound.html" class="btn_gray float_r"><span>返回</span></a>
             <h1 class="main_title">广播/通知设置</h1>
-            <form>
+            <div class="clear"></div>            <form>
             	<div class="set_module">
                 	<h2>广播隐私<span class="gray">（你可以自己选择将自己一些动作与朋友分享，你发现的好东西对别人会非常有用）</span></h2>
                     <div class="set_optional">
