清洗数据程序debug

--- a/app/views/themes/waterfall/wineries/_winery_detail.html.erb
+++ b/app/views/themes/waterfall/wineries/_winery_detail.html.erb
@@ -71,7 +71,8 @@
 
    <div class="right">
      <div class="share">
-       <%= render "themes/waterfall/share/sns_icons" %>
+       <%= render "share/sns_icons" %>
+       <div class="clear"></div>
      </div>
      <ul class="item">
        <li>
