--- a/app/views/themes/waterfall/layouts/_global_nav.html.erb
+++ b/app/views/themes/waterfall/layouts/_global_nav.html.erb
@@ -24,7 +24,7 @@
 				 			<dl class="clearfix">
 				 				<dt>
 				 					<%= link_to wine_path(wine) do %>
-					 					<%= wine_cover_tag wine, :thumb_name => :x_thumb,  :size => "30x30" %>
+					 					<%= wine_cover_tag wine, :thumb_name => :thumb,  :size => "30x30" %>
 				 					<% end %>
 				 				</dt>
 				 				<dd>
