--- a/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
+++ b/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
@@ -63,14 +63,7 @@
     </div>
 
     <div class="right">
-      <div class="sidebox">
-        <div class="title"><h3>热门酒款</h3></div>
-        <div class="main">
-          <ul class="sidewine">
-             <%= render :partial => "wineries/hot_wine", :collection => @hot_wines, :as => :wine_detail %>
-          </ul>
-        </div>
-      </div>
+      <%= render "wineries/hot_wine" %>
     </div>
 
     <div class="clear"></div>
