about us etc page update

--- a/public/template/feedback.html
+++ b/public/template/feedback.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
-<link href="stylesheets/hp.css" rel="stylesheet" type="text/css" />
+<link href="stylesheets/about.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -37,43 +37,10 @@
       </ul>
     </div>
     <div id="wrapper950">
-    	<div class="whitespace">
-        <div id="hp">
-          <div class="hp_header">
-            <div class="hp_right"><a href="#" class="btn_red_sb"><span>我的酒窖</span></a></div>
-            <div class="hp_userimg"><a href="#"><img src="images/userimage/p130.jpg" width="130" height="130" alt="usrename" /></a></div>
-            <div class="hp_info">
-                <div class="username">不良夏生</div>
-                <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
-                <div class="item"><a class="icon_mail" href="#">私信</a> | <a href="#">设置</a></div>
-                <ul class="hp_navi">
-                    <li class="current"><a href="cellar.html">12<br/>藏酒</a></li>
-                    <li><a href="hp_wine_following.html">12<br/>
-                    关注的酒</a></li>
-                    <li><a href="hp_winery_following.html">12<br/>
-                    关注的酒庄</a></li>
-                    <li><a href="hp_comment_list.html">12<br/>评论</a></li>
-                    <li><a href="hp_testing_list.html">12<br/>品酒辞</a></li>
-                    <li><a href="hp_people_following.html">12<br/>关注的人</a></li>
-                    <li><a href="hp_people_follower.html">12<br/>粉丝</a></li>
-                    <li><a href="album.html">12<br/>相册</a></li>
-                </ul>
-                <div class="clear"></div>
-            </div>
-            <div class="clear"></div>
-          </div>
-      <div id="cellar">
-          <div class="title_btn">
-                <h1>添加藏酒</h1>
-          </div>
-          <div class="step">
-        	<div class="step_thr"></div>
-          </div>
-        <div class="success mb40">成功添加 2001拉菲珍宝 到您的酒窖！</div>
-          <div class="align_c"><a href="cellar.html" class="btn_gray_b"><span>返回酒窖首页</span></a></div>
-      </div>
-    </div>
-    </div>
+    	<div class="whitespace about">
+          <h1 class="main_title">意见反馈</h1>
+          
+   	  </div>
     </div>
     <div id="footer">
         <div class="link"><a href="aboutus.html">关于我们</a> | <a href="contactus.html">联系我们</a> | <a href="help.html">帮助中心</a> | <a href="privacy.html">隐私条款</a> | <a href="agreement.html">用户协议</a> | <a href="disclaimer.html">免责声明</a> | <a href="sitemap.html">网站地图</a> | <a href="feedback.html">意见反馈</a></div>
