--- a/public/template/friends_sns_unbound.html
+++ b/public/template/friends_sns_unbound.html
@@ -57,7 +57,7 @@
    	  </div>
     </div>
     <div id="footer">
-        <div class="link"><a href="#">关于我们</a> | <a href="#">联系我们</a> | <a href="#">帮助中心</a> | <a href="#">隐私条款</a> | <a href="#">用户协议</a> | <a href="#">网站地图</a> | <a href="#">意见反馈</a></div>
+        <div class="link"><a href="aboutus.html">关于我们</a> | <a href="contactus.html">联系我们</a> | <a href="help.html">帮助中心</a> | <a href="privacy.html">隐私条款</a> | <a href="agreement.html">用户协议</a> | <a href="disclaimer.html">免责声明</a> | <a href="sitemap.html">网站地图</a> | <a href="feedback.html">意见反馈</a></div>
         <div class="copyright">Copyright © 2011 iWine, Inc. All rights reserved. <a href="#">沪ICP备12345678号</a></div>
     </div>
 </body>
