--- a/public/template/lightbox_delet.html
+++ b/public/template/lightbox_delet.html
@@ -36,25 +36,19 @@
             <div class="clear"></div>
       </ul>
     </div>
-    <div class="fancybox-wrap fancybox-default fancybox-opened" style="width: 450px; height: auto; display: block; position: fixed; top: 349px; left: 617px; overflow: visible;">
-        <div class="fancybox-outer" style="padding: 0px; width: auto; height: auto;">
-            <div class="fancybox-inner" style="width: 450px; height: auto; overflow: auto;">
-
+    <div class="fancybox-wrap fancybox-default fancybox-opened" style="width: 450px; height: auto; display: block; position: fixed; top: 349px; left: 617px; overflow: visible;"><div class="fancybox-outer" style="padding: 0px; width: auto; height: auto;"><div class="fancybox-inner" style="width: 450px; height: auto; overflow: auto;">
   <h3 class="title">确定要删除这张照片?</h3>
-  <div class="popup_content">
-      <div class="confirm">
-        <a class="btn_gray float_l mr5" onclick="$.fancybox.close(true);" href="javascript:;">
-          <span>取消</span>
-      </a>
-      <a class="btn_gray float_l " href="javascript:delete_upload_photo(266);$.fancybox.close(true);">
-          <span>确定</span>
-      </a>
-      <div class="clear"></div>
+<div class="popup_content">
+  <div class="confirm">
+    <a class="btn_gray float_l mr5" onclick="$.fancybox.close(true);" href="javascript:;">
+      <span>取消</span>
+    </a>
+    <a class="btn_gray float_l " href="javascript:delete_upload_photo(266);$.fancybox.close(true);">
+      <span>确定</span>
+    </a>
+    <div class="clear"></div>
   </div>
-</div>
-</div>
-</div>
-</div>
+</div></div></div></div>
          
          
 </body>
