--- a/public/template/login.html
+++ b/public/template/login.html
@@ -47,7 +47,7 @@
                         <div class="rember_pw">
                             <a href="index.html"><img class="float_r" src="images/common/btn_login.jpg" width="96" height="41" alt="登陆" /></a>
                         <label><input class="checkbox" name="" type="checkbox" value="" /> 记住我</label> 
-                            | <a href="#">忘记密码了？</a>
+                            | <a href="password_forget.html">忘记密码了？</a>
                             <div class="clear"></div>
                         </div>
                   </div>
