--- a/app/views/themes/waterfall/wine_details/add_step_one.html.erb
+++ b/app/views/themes/waterfall/wine_details/add_step_one.html.erb
@@ -1,5 +1,9 @@
 <div class="whitespace addwine">
-  <%= render "wine_details/addwine_step" %>
+	<%#= render "wine_details/addwine_step" %>
+	<h1 class="main_title">添加酒款</h1>
+	<div class="step">
+		<div class="step_fir"></div>
+	</div>
   <div class="search">
     <%= render :partial => "wine_details/search_wine", :object => @search %>
   </div>
