--- a/app/views/themes/waterfall/wine_details/share/_vintage.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_vintage.html.erb
@@ -5,9 +5,11 @@
 		  <span><%= link_to item.show_year, wine_path(item.id) %></span>
 		<% end %>
 	</p>
-	<p class="mt10">
+
+	<!-- <p class="mt10"> 
 		<a href="#">
 			<%= theme_image_tag "icon/open.gif", :width => 13, :height => 13, :alt => "查看所有年份" %>
 		</a>
 	</p>
+-->
 </div>
