--- a/app/views/themes/waterfall/comments/_comments.html.erb
+++ b/app/views/themes/waterfall/comments/_comments.html.erb
@@ -1,11 +1,13 @@
 	<% if params[:controller] == "wine_details" &&  params[:action] == "show" %>
 	<div class="title_btn">
-		<a href="#" class="btn_gray float_r"><span>添加评论</span></a>
+		<%= link_to new_wine_comment_path(@wine_detail.id, :do => "comment"), :class => [:btn_gray, :float_r, :ajax], :remote => true do %>
+		<span>添加评论</span>
+	<% end %>
 		<% unless params[:controller] == "wine_details/comments" %>
 		<h2>
 		  评论
 		  <span class="font12 more">
-		    <%= link_to "(#{@wine_detail.comments_count}条...)", wine_comments_path(@wine_detail.id)%>
+		    <%= link_to "(#{@wine_detail.all_comments_count}条...)", wine_comments_path(@wine_detail.id)%>
 		  </span>
 		</h2>
 		<% end %>
