--- a/app/views/themes/waterfall/layouts/_global_nav.html.erb
+++ b/app/views/themes/waterfall/layouts/_global_nav.html.erb
@@ -1,42 +1,78 @@
 <ul>
 	<% global_nav = {"home" => root_path, "wines" => wines_path, "wineries" => wineries_path} %>
 	<% global_nav.each do |key, value| %>
-		<% if key == "wines" %> 
+		<% if key == "wines" || key == "wineries" %> 
 			<%= content_tag :li, :class => "arrow" do %>
 				<%= link_to t("nav.#{key}"), value, :class => "arrow_link" %>
-				 <ul class="CategoryDropdown" style="display: none; z-index:1000000">
-				 	<% APP_DATA["search"]["wine"].each do |type,values| %>
-				 	 <li>
-				 	 	<p class="title"><%= t("nav.global_nav.#{type}") %></p>
-				 	 	<div class="item">
-				 	 		<% values.each do |item|  %>
-					 	 		<span>
-					 	 			<%= link_to item, results_searches_path(:tab => :wine, :word => item) %>
-					 	 		</span>
-				 	 		<% end %>
-				 	 	</div>
-				 	 </li>
-				 	<% end %> 
-				 	<li>
-				 		<p class="title">热门酒款</p>
-				 		<% get_hot_wine(1).each do |wine| %>
-				 		<div class="item hot">
-				 			<dl class="clearfix">
-				 				<dt>
-				 					<%= link_to wine_path(wine) do %>
-					 					<%= wine_cover_tag wine, :thumb_name => :thumb,  :size => "30x30" %>
-				 					<% end %>
-				 				</dt>
-				 				<dd>
-				 					<span><%= link_to wine.cname, wine_path(wine) %></span>
-				 					<p><%= link_to wine.ename, wine_path(wine) %></p>
-				 				</dd>
-				 				<div class="clear"></div>
-				 			</dl>
-				 		</div>
-				 		<% end %>
-				 	</li>
-				 </ul>
+				<% if key == "wines" # 酒%>
+					 <ul class="CategoryDropdown" style="display: none; z-index:1000000">
+					 	<% APP_DATA["search"]["wine"].each do |type,values| %>
+					 	 <li>
+					 	 	<p class="title"><%= t("nav.global_nav.#{type}") %></p>
+					 	 	<div class="item">
+					 	 		<% values.each do |item|  %>
+						 	 		<span>
+						 	 			<%= link_to item, results_searches_path(:tab => :wine, :word => item) %>
+						 	 		</span>
+					 	 		<% end %>
+					 	 	</div>
+					 	 </li>
+					 	<% end %> 
+					 	<li>
+					 		<p class="title">热门酒款</p>
+					 		<% get_hot_wine(1).each do |wine| %>
+					 		<div class="item hot">
+					 			<dl class="clearfix">
+					 				<dt>
+					 					<%= link_to wine_path(wine) do %>
+						 					<%= wine_cover_tag wine, :thumb_name => :thumb,  :size => "30x30" %>
+					 					<% end %>
+					 				</dt>
+					 				<dd>
+					 					<span><%= link_to wine.cname, wine_path(wine) %></span>
+					 					<p><%= link_to wine.ename, wine_path(wine) %></p>
+					 				</dd>
+					 				<div class="clear"></div>
+					 			</dl>
+					 		</div>
+					 		<% end %>
+					 	</li>
+					 </ul>
+				 <% elsif key == "wineries" # 酒庄 %>
+				 			 <ul class="CategoryDropdown" style="display: none; z-index:1000000">
+					 	<% APP_DATA["search"]["winery"].each do |type,values| %>
+					 	 <li>
+					 	 	<p class="title"><%= t("nav.global_nav.#{type}") %></p>
+					 	 	<div class="item">
+					 	 		<% values.each do |item|  %>
+						 	 		<span>
+						 	 			<%= link_to item, results_searches_path(:tab => :wine, :word => item) %>
+						 	 		</span>
+					 	 		<% end %>
+					 	 	</div>
+					 	 </li>
+					 	<% end %> 
+					 	<li>
+					 		<p class="title">热门酒庄</p>
+					 		<% get_hot_wineries(2).each do |winery| %>
+					 		<div class="item hot">
+					 			<dl class="clearfix">
+					 				<dt>
+					 					<%= link_to winery_path(winery) do %>
+						 					<%= winery_cover_tag wine, :thumb_name => :thumb,  :size => "30x30" %>
+					 					<% end %>
+					 				</dt>
+					 				<dd>
+					 					<span><%= link_to wine.cname, wine_path(wine) %></span>
+					 					<p><%= link_to wine.ename, wine_path(wine) %></p>
+					 				</dd>
+					 				<div class="clear"></div>
+					 			</dl>
+					 		</div>
+					 		<% end %>
+					 	</li>
+					 </ul>
+				 <% end %>
 				<%#= html.html_safe %>
 			<% end %>
 		<% else %>
