--- a/app/views/themes/waterfall/users/share/_user_followers.html.erb
+++ b/app/views/themes/waterfall/users/share/_user_followers.html.erb
@@ -1,3 +1,4 @@
+<% if !@followers.blank? %>
 <ul class="userlist">
 <% @followers.map_user.each_with_index do |user, index| %>
 <li>
@@ -11,7 +12,7 @@
     <div class="username">
       <%= link_to_user user, user_path(user.id,:trailing_slash => true) %> 
     </div>
-    <div class="userlocation">上海</div>
+    <div class="userlocation"><%= user.city %></div>
     <% if user_signed_in? %>
     <% if current_user.is_following user.id %>
     <p>    
@@ -39,3 +40,6 @@
   <% end %>
 <% end %>
 </ul>
+<% else %>
+<p>暂时没有粉丝. </p>
+<% end %>
