--- a/app/views/themes/waterfall/wine_details/share/_buttons.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_buttons.html.erb
@@ -26,7 +26,7 @@
 	<%= link_to new_wine_comment_path(@wine_detail.id, :do => "comment"), :class => [:btn_gray, :mr5, :ajax], :remote => true do %>
 		<span>评论</span>
 	<% end %>
-	<%= link_to  add_to_cellar_wine_path(@wine_detail.id), :class => [:btn_gray], :remote => true do %>
+	<%= link_to  add_to_cellar_wine_path(@wine_detail.id), :class => [:btn_gray] do %>
 		<span>加入酒窖</span>
 	<% end %>
 </div>
