--- a/app/views/themes/waterfall/wine_details/share/_followers_list.erb
+++ b/app/views/themes/waterfall/wine_details/share/_followers_list.erb
@@ -8,7 +8,7 @@
 			<div class="username">
 					<%= link_to_user user, user_path(user, :trailing_slash => true) %>
 			</div>
-			<div class="userlocation">上海</div>
+			<div class="userlocation"><%= user.city %></div>
 		</div>
 	</li>
 	<% if ((index + 1) % 3) == 0 %>
