--- a/app/views/themes/waterfall/wine_details/share/_spec.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_spec.html.erb
@@ -12,11 +12,9 @@
   <br />
 	<% end %>
 	官网：<%= link_to @wine.official_site, 'http://' + @wine.official_site, :target => '_blank' %><br />
-	产区：<%= render 'share/region_tree', :region_tree => @wine_detail.get_region_path(@wine_detail.wine.region_tree_id) %>
+	产区：<%= render 'share/region_tree', :region_tree => @wine_detail.get_region_path(@wine_detail.wine.region_tree_id) %><br />
 	类型： <%= link_to @wine.style.name_zh,
-                :controller => :searh,
-                :action => :wine,
-                :style => @wine.style.name_en %><br />
+				results_searches_path(:tab => :wine, :word => @wine.style.name_en) %><br />
 	容量：<%= @wine_detail.capacity %><br />
 	酒精度：<%= @wine_detail.alcoholicity %>Vol<br />
 	葡萄品种： <% @wine_detail.variety_percentages.each do |i| %>
