Bugs fixed add static page...
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/themes/waterfall/albums/index.html.erb
+++ b/app/views/themes/waterfall/albums/index.html.erb
@@ -18,8 +18,8 @@
   <% @albums.each do |album| %>
        	<li> 
           <%= link_to album_show_user_path(@user, album.id) do %>
-            <% if album.cover.present? %>
-             <%= image_tag album.cover.image_url :thumb, :class => 'cover' %>
+            <% if album.covers.present? %>
+             <%= image_tag album.covers.first.image_url :thumb, :class => 'cover' %>
             <% else %>
              <%= theme_image_tag "album.jpg", :class => :cover, :width => 150, :height => 150 %>
             <% end %>
