--- a/app/views/themes/waterfall/static/private.html.erb
+++ b/app/views/themes/waterfall/static/private.html.erb
@@ -1,5 +1,26 @@
- <div class="whitespace">
- 	<%= title @title %>
- 	<p>Coming Soon...</p>
- 	<div class="clear"></div>
- </div>
+<% content_for :css do %>
+<%= theme_stylesheet_link_tag :about %>
+<% end %>	
+
+<div class="whitespace about">
+	<h1 class="main_title">爱红酒（iWine）用户隐私条款</h1>
+	<h2>总则</h2>
+	<p>爱红酒网站（iWine）尊重您个人的隐私权。此项政策概述可供收集的个人身体资料内容及如何使用这些资料。并且，也说明与您的隐私相关的其它重要事项。</p>
+	<h2>1. 资料收集</h2>
+	<p>我们仅收集通过应用程序、网站或电子邮件自愿提供的个人身份资料，如姓名、职务、公司名称、地址、电话号码或电子邮件地址等。为改进我们的服务并满足您的需求，我们会在您授权后搜集并记录一些综合性的资料，如地理位置。</p>
+	<h2>2. 资料使用</h2>
+	<p>在收集任何个人身份资料之前，我们将会向您说明可能如何使用您的资料。我们将利用您所提供的资料来答复您的问询、提供您所订购的产品及服务，或是追踪观察您与InstaPrint的订单进展情况。我们也许会授权第三方来收集、追踪和处理这些资料。如果您已通过电子手段向我们提供个人资料并欲删除或修改这些资料，请通过电子邮件地址 <a href="mailto:info@sidways.com">info@sidways.com</a>与我们联系。我们将竭尽所能来满足您的要求。</p>
+	<h2>3. 儿童与家长</h2>
+	<p>爱红酒网站含有大量含酒精饮料产品的内容。依据中国和世界其他国家法律，用户需达到当地或所属国家的法定饮酒年龄才可使用本站服务。本站严格恪守这一法律要求。我们不接受未达到法定饮酒年龄之用户注册。如果您发现您的未成年子女通过某种非法手段注册成为本站用户，请通过上述联络方式与我们接洽，我们将第一时间冻结并尽快删除其账户。</p>
+	<h2>4. 其他重要事项</h2>
+	<p>爱红酒网站也许会链接到其它网站，这并不代表我们对这些网站的内容或隐私权处理政策的认可或担负责任。此外，我们的部分网页也许会含有所谓"cookies"的资料，这些资料会传送至您的浏览器而存储在您的电脑中。这可使我们的服务器在您未来进入我们的网站时"辨认"您的身份。大部分浏览器可以设置成不接受cookies，或是在cookies传入时通知您。如因法律规定或为配合司法政府调查，我们将不得不提供您的个人身份资料。本站保留随时修改本隐私条款的权力，并迅速在我们的网页中反映所有修正内容。</p>
+	<h2>5. 有关于隐私权处理或者我们的隐私权政策声明</h2>
+	<p>如果您对于我们的隐私条款，网络隐私权处理声明或者您的个人信息处理有任何疑问，请联系我们：
+		<br />
+		电子邮件：<a href="mailto:info@sidways.com">info@sidways.com</a><br />
+		信件地址：上海市茶陵北路20号3幢401室 iWine项目组 （收）
+		<br />
+		邮政编码：200032
+		<br />
+		电话：+86-21-51702312</p>
+	</div>
