--- a/app/views/themes/waterfall/users/share/_favorite_wines.html.erb
+++ b/app/views/themes/waterfall/users/share/_favorite_wines.html.erb
@@ -11,7 +11,7 @@
   <%= wine_cover_tag(item.wine_detail, 
       :thumb_name => :thumb, 
       :width => 201, 
-      :height => 201) %>;
+      :height => 201) %>
   <% end %>
   <% end %>
 </span>
