--- a/app/views/themes/waterfall/layouts/_global_nav.html.erb
+++ b/app/views/themes/waterfall/layouts/_global_nav.html.erb
@@ -4,7 +4,7 @@
 		<% if key == "wines" || key == "wineries" %> 
 			<%= content_tag :li, :class => "arrow" do %>
 				<%= link_to t("nav.#{key}"), value, :class => "arrow_link" %>
-				<% if key == "wines" # 酒%>
+				<% if key == "wines" # 酒 %>
 					 <ul class="CategoryDropdown" style="display: none; z-index:1000000">
 					 	<% APP_DATA["search"]["wine"].each do |type,values| %>
 					 	 <li>
@@ -46,7 +46,7 @@
 					 	 	<div class="item">
 					 	 		<% values.each do |item|  %>
 						 	 		<span>
-						 	 			<%= link_to item, results_searches_path(:tab => :wine, :word => item) %>
+						 	 			<%= link_to item, winery_searches_path(:word => item) %>
 						 	 		</span>
 					 	 		<% end %>
 					 	 	</div>
@@ -59,12 +59,12 @@
 					 			<dl class="clearfix">
 					 				<dt>
 					 					<%= link_to winery_path(winery) do %>
-						 					<%= winery_cover_tag wine, :thumb_name => :thumb,  :size => "30x30" %>
+						 					<%= winery_cover_tag winery, :thumb_name => :thumb,  :size => "30x30" %>
 					 					<% end %>
 					 				</dt>
 					 				<dd>
-					 					<span><%= link_to wine.cname, wine_path(wine) %></span>
-					 					<p><%= link_to wine.ename, wine_path(wine) %></p>
+					 					<span><%= link_to winery.name_zh, winery_path(winery) %></span>
+					 					<p><%= link_to winery.name_en, winery_path(winery) %></p>
 					 				</dd>
 					 				<div class="clear"></div>
 					 			</dl>
