--- a/app/views/themes/waterfall/searches/results.html.erb
+++ b/app/views/themes/waterfall/searches/results.html.erb
@@ -110,43 +110,7 @@
   <div class="right">
     <div class="sidebar">
       <div class="title">或许你会对这些人感兴趣...</div>
-      <ul class="userlist">
-        <li>
-          <div class="userpic"><a href="#"><img src="images/userimage/04.jpg" width="50" height="50" /></a></div>
-          <div class="userinfo">
-            <p class="username"><a href="#">不良夏生</a><span class="location">上海</span></p>
-            <p class="statu"><a href="#" class="btn_gray"><span>加关注</span></a></p>
-          </div>
-        </li>
-        <li>
-          <div class="userpic"><a href="#"><img src="images/userimage/05.jpg" width="50" height="50" /></a></div>
-          <div class="userinfo">
-            <p class="username"><a href="#">aluoaluo</a><span class="location">北京</span></p>
-            <p class="statu"><a href="#" class="btn_gray"><span>加关注</span></a></p>
-          </div>
-        </li>
-        <li>
-          <div class="userpic"><a href="#"><img src="images/userimage/07.jpg" width="50" height="50" /></a></div>
-          <div class="userinfo">
-            <p class="username"><a href="#">我就是秀秀</a><span class="location">香港</span></p>
-            <p class="statu"><a href="#" class="btn_gray"><span>加关注</span></a></p>
-          </div>
-        </li>
-        <li>
-          <div class="userpic"><a href="#"><img src="images/userimage/01.jpg" width="50" height="50" /></a></div>
-          <div class="userinfo">
-            <p class="username"><a href="#">不良夏生</a><span class="location">上海</span></p>
-            <p class="statu"><a href="#" class="btn_gray"><span>加关注</span></a></p>
-          </div>
-        </li>
-        <li>
-          <div class="userpic"><a href="#"><img src="images/userimage/08.jpg" width="50" height="50" /></a></div>
-          <div class="userinfo">
-            <p class="username"><a href="#">aluoaluo</a><span class="location">北京</span></p>
-            <p class="statu"><a href="#" class="btn_gray"><span>加关注</span></a></p>
-          </div>
-        </li>
-      </ul>
+      <%= render "users/share/recommend_users" %>
     </div>
   </div>
   <div class="clear"></div>
